# kaiti_yolopose_framework

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-cu118.txt  requirements-cu121.txt  requirements.txt
.codex/: config.toml
configs/: export_onnx.yaml  infer_pose_stream.yaml  infer_pose_stream_fallvision_nofall.yaml  infer_pose_stream_fallvision_nofall_sampled.yaml  infer_pose_stream_fallvision_nofall_sampled_finetuned.yaml  infer_pose_stream_tcn.yaml  train_fall_sequence.yaml  train_fall_sequence_fallvision.yaml  train_fall_sequence_tcn.yaml  train_fall_sequence_urfall_finetune_from_fallvision_sampled.yaml  train_fall_sequence_urfall_plus_fallvision_nofall.yaml  train_fall_sequence_urfall_plus_fallvision_nofall_sampled.yaml  train_pose.yaml
data/: README.md
datasets/: custom_fall_pose.yaml
docs/: README.md  agents.md  architect_mock_input_summary_2026-04-10.md  architect_summary_2026-04-10.md  architecture.md  dataset_positioning.md  documentation_information_architecture.md  external_dataset_workflow.md  fallvision_integration.md  hard_negative_plan.md  inference_resources.md  interface_migration_summary_2026-04-10.md  kaiti_alignment.md  method_roadmap.md  (+14 more)
ros2_ws/src/yolopose_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolopose_ros/config/: perception_bridge.yaml  phase4a_turtlebot4_rtabmap.yaml  phase4b_nav2_precheck.yaml  phase5_nav2_dispatcher.yaml  system_stack.yaml
ros2_ws/src/yolopose_ros/launch/: perception_bridge.launch.py  phase4a_turtlebot4_rtabmap.launch.py  phase4b_nav2_precheck.launch.py  phase5_nav2_dispatcher.launch.py  pose_stream.launch.py  system_stack.launch.py
ros2_ws/src/yolopose_ros/yolopose_ros/: __init__.py  camera_stream_node.py  planner_nav2_dispatcher_logic.py  planner_nav2_dispatcher_node.py  pose_stream_node.py  system_semantics.py  system_supervisor_node.py  task_planner_bridge_node.py
(+88 files in other folders)
