<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolopose_ros</name>
  <version>0.0.1</version>
  <description>ROS2 wrapper for YOLO pose streaming inference.</description>
  <maintainer email="you@example.com">yhc</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <!-- Phase 4a runtime simulator dependency: install either turtlebot4_ignition_bringup
       or turtlebot4_gz_bringup with the TurtleBot4 simulator packages. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
